--- a/templates/management.html
+++ b/templates/management.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Management</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/management_style.css') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/Management.css') }}" />
 </head>
 
 <body>
